--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
+cachetools==3.1.0
+certifi==2019.3.9
+chardet==3.0.4
 Django==2.1.7
+google-api-python-client==1.7.8
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+httplib2==0.12.1
+idna==2.8
+pafy==0.5.4
 pkg-resources==0.0.0
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
 pytz==2018.9
+requests==2.21.0
+rsa==4.0
+six==1.12.0
+uritemplate==3.0.0
+urllib3==1.24.1
+youtube-dl==2019.3.18
